# CLIApp

./: README.md  draft.README.md  pyproject.toml
src/cliapp/: application.py  command.py  interface.py
src/cliapp/config/: application.py  base.py  color.py  shell.py  theme.py  version.py
src/cliapp/util/: color.py  defaults.py  synchronizer.py  tools.py
tests/: README.test.py  config.json  test.py
