[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "CLIApp_devingreen"
version = "0.0.1"
authors = [
  { name="Devin Green", email="devin.green@me.com" },
]
description = "A modular package for building CLI applications"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/devingreen4/cliapp"
Issues = "https://github.com/devingreen4/cliapp/issues"